// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Gallery /> active item click on gallery item 1`] = `
<DocumentFragment>
  .c7 {
  vertical-align: middle;
}

.c3 {
  visibility: visible;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1001;
  background: rgba(0,0,0,0.65);
  overflow: auto;
}

.c4 {
  position: relative;
}

.c5 {
  position: relative;
  background: transparent;
  margin: 120px auto;
  outline: none;
  width: 500px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 1.6em;
  border-bottom: 1px solid #C6C6C6;
  padding: 15px;
}

.c6 h3 {
  font-size: 0.8em;
  text-transform: uppercase;
  margin: 0;
  margin-right: 36px;
}

.c6 button {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  width: 15px;
}

.c8 {
  position: relative;
  padding: 0;
}

.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  white-space: normal;
}

.c14 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  cursor: pointer;
  font-size: 2em;
  left: 0;
  cursor: not-allowed;
}

.c15 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  cursor: pointer;
  font-size: 2em;
  right: 0;
  cursor: pointer;
}

.c9 {
  position: relative;
  white-space: nowrap;
  overflow: hidden;
  outline: none;
}

.c9 .c11 {
  padding: 2em 4em;
}

.c9 ul {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 0;
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 ul li {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 12px;
  height: 12px;
  background: #C6C6C6;
  border-radius: 50%;
  box-shadow: 0 1px 1px rgba(0,0,0,0.15);
  margin: 0 4px;
  cursor: pointer;
}

.c9 ul li.active {
  width: 2.5em;
  border-radius: 1em;
  background: #FFF240;
}

.c0 {
  position: relative;
}

.c0 .modal-content {
  width: 95vw;
}

.c0 .modal-content .modal-header {
  border-bottom: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 img {
  height: 5em;
  width: 5em;
  object-fit: cover;
  cursor: pointer;
}

.c2 {
  position: relative;
  margin: 5px;
}

.c2:last-child:after {
  content: '+2';
  position: absolute;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0869C2;
  height: 100%;
  width: 100%;
  font-size: 18px;
  background: rgba(255,255,255,0.75);
  cursor: pointer;
}

.c13 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 img {
  height: 50vh;
  width: auto;
  object-fit: contain;
}

.c16 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 img {
  height: 4em;
  width: 4em;
  object-fit: cover;
  cursor: pointer;
  margin: 0.3em;
}

.c16 img.active {
  border: 1px solid #FFFFFF;
}

@media (max-width:480) {
  .c5 {
    width: 95vw;
  }
}

@media (max-width:480) {
  .c8 {
    padding: 0;
  }
}

<div
    class="c0 aries-gallery"
  >
    <div
      class="c1 gallery-wrapper"
    >
      <div
        class="c2 gallery-item"
      >
        <img
          alt="0"
          src="1"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="1"
          src="2"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="2"
          src="3"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="3"
          src="4"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="4"
          src="5"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="5"
          src="6"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="6"
          src="7"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="7"
          src="8"
        />
      </div>
    </div>
    <div
      class="c3 aries-modal"
      data-testid="modal-container"
    >
      <div
        class="c4 modal-dialog"
      >
        <div
          aria-modal="true"
          class="c5 modal-content"
          data-testid="dialog"
          role="dialog"
          tabindex="0"
        >
          <header
            class="c6 modal-header"
          >
            <h3 />
            <button
              aria-label="Close button"
              data-testid="close-button"
              type="button"
            >
              <svg
                class="c7"
                data-testid="icon-svg"
                fill="white"
                height="1em"
                viewBox="0 0 100 100"
                width="1em"
              >
                <path
                  d="M100 10L90 0 50 40 10 0 0 10l40 40L0 90l10 10 40-40 40 40 10-10-40-40z"
                />
              </svg>
            </button>
          </header>
          <section
            class="c8 modal-body"
          >
            <div
              class="c9 aries-slider"
              tabindex="0"
            >
              <div
                class="c10 slider-wrapper"
                style="transform: translateX(0px); transition: transform ease-out 0.45s;"
              >
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="0"
                      src="1"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="1"
                      src="2"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="2"
                      src="3"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="3"
                      src="4"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="4"
                      src="5"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="5"
                      src="6"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="6"
                      src="7"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="7"
                      src="8"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="8"
                      src="9"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="9"
                      src="10"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c14"
                data-testid="slider_left-arrow"
              >
                <svg
                  class="c7"
                  data-testid="icon-svg"
                  fill="#FFFFFF"
                  height="1em"
                  viewBox="0 0 100 100"
                  width="1em"
                >
                  <path
                    d="M81 88.4L42.6 50 81 11.8 69.2 0l-50 50 50 50z"
                  />
                </svg>
              </div>
              <div
                class="c15"
                data-testid="slider_right-arrow"
              >
                <svg
                  class="c7"
                  data-testid="icon-svg"
                  fill="#FFFFFF"
                  height="1em"
                  viewBox="0 0 100 100"
                  width="1em"
                >
                  <path
                    d="M19 88.4L57.4 50 19 11.8 30.8 0l50 50-50 50z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="c16"
            >
              <div>
                <img
                  alt="0"
                  data-testid="gallery_thumbnail"
                  src="1"
                />
              </div>
              <div>
                <img
                  alt="1"
                  data-testid="gallery_thumbnail"
                  src="2"
                />
              </div>
              <div>
                <img
                  alt="2"
                  data-testid="gallery_thumbnail"
                  src="3"
                />
              </div>
              <div>
                <img
                  alt="3"
                  class="active"
                  data-testid="gallery_thumbnail"
                  src="4"
                />
              </div>
              <div>
                <img
                  alt="4"
                  data-testid="gallery_thumbnail"
                  src="5"
                />
              </div>
              <div>
                <img
                  alt="5"
                  data-testid="gallery_thumbnail"
                  src="6"
                />
              </div>
              <div>
                <img
                  alt="6"
                  data-testid="gallery_thumbnail"
                  src="7"
                />
              </div>
              <div>
                <img
                  alt="7"
                  data-testid="gallery_thumbnail"
                  src="8"
                />
              </div>
              <div>
                <img
                  alt="8"
                  data-testid="gallery_thumbnail"
                  src="9"
                />
              </div>
              <div>
                <img
                  alt="9"
                  data-testid="gallery_thumbnail"
                  src="10"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Gallery /> active item click on gallery thumbnail 1`] = `
<DocumentFragment>
  .c7 {
  vertical-align: middle;
}

.c3 {
  visibility: visible;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1001;
  background: rgba(0,0,0,0.65);
  overflow: auto;
}

.c4 {
  position: relative;
}

.c5 {
  position: relative;
  background: transparent;
  margin: 120px auto;
  outline: none;
  width: 500px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 1.6em;
  border-bottom: 1px solid #C6C6C6;
  padding: 15px;
}

.c6 h3 {
  font-size: 0.8em;
  text-transform: uppercase;
  margin: 0;
  margin-right: 36px;
}

.c6 button {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  width: 15px;
}

.c8 {
  position: relative;
  padding: 0;
}

.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  white-space: normal;
}

.c14 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  cursor: pointer;
  font-size: 2em;
  left: 0;
  cursor: not-allowed;
}

.c15 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  cursor: pointer;
  font-size: 2em;
  right: 0;
  cursor: pointer;
}

.c9 {
  position: relative;
  white-space: nowrap;
  overflow: hidden;
  outline: none;
}

.c9 .c11 {
  padding: 2em 4em;
}

.c9 ul {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 0;
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 ul li {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 12px;
  height: 12px;
  background: #C6C6C6;
  border-radius: 50%;
  box-shadow: 0 1px 1px rgba(0,0,0,0.15);
  margin: 0 4px;
  cursor: pointer;
}

.c9 ul li.active {
  width: 2.5em;
  border-radius: 1em;
  background: #FFF240;
}

.c0 {
  position: relative;
}

.c0 .modal-content {
  width: 95vw;
}

.c0 .modal-content .modal-header {
  border-bottom: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 img {
  height: 5em;
  width: 5em;
  object-fit: cover;
  cursor: pointer;
}

.c2 {
  position: relative;
  margin: 5px;
}

.c2:last-child:after {
  content: '+2';
  position: absolute;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0869C2;
  height: 100%;
  width: 100%;
  font-size: 18px;
  background: rgba(255,255,255,0.75);
  cursor: pointer;
}

.c13 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 img {
  height: 50vh;
  width: auto;
  object-fit: contain;
}

.c16 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 img {
  height: 4em;
  width: 4em;
  object-fit: cover;
  cursor: pointer;
  margin: 0.3em;
}

.c16 img.active {
  border: 1px solid #FFFFFF;
}

@media (max-width:480) {
  .c5 {
    width: 95vw;
  }
}

@media (max-width:480) {
  .c8 {
    padding: 0;
  }
}

<div
    class="c0 aries-gallery"
  >
    <div
      class="c1 gallery-wrapper"
    >
      <div
        class="c2 gallery-item"
      >
        <img
          alt="0"
          src="1"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="1"
          src="2"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="2"
          src="3"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="3"
          src="4"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="4"
          src="5"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="5"
          src="6"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="6"
          src="7"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="7"
          src="8"
        />
      </div>
    </div>
    <div
      class="c3 aries-modal"
      data-testid="modal-container"
    >
      <div
        class="c4 modal-dialog"
      >
        <div
          aria-modal="true"
          class="c5 modal-content"
          data-testid="dialog"
          role="dialog"
          tabindex="0"
        >
          <header
            class="c6 modal-header"
          >
            <h3 />
            <button
              aria-label="Close button"
              data-testid="close-button"
              type="button"
            >
              <svg
                class="c7"
                data-testid="icon-svg"
                fill="white"
                height="1em"
                viewBox="0 0 100 100"
                width="1em"
              >
                <path
                  d="M100 10L90 0 50 40 10 0 0 10l40 40L0 90l10 10 40-40 40 40 10-10-40-40z"
                />
              </svg>
            </button>
          </header>
          <section
            class="c8 modal-body"
          >
            <div
              class="c9 aries-slider"
              tabindex="0"
            >
              <div
                class="c10 slider-wrapper"
                style="transform: translateX(0px); transition: transform ease-out 0.45s;"
              >
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="0"
                      src="1"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="1"
                      src="2"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="2"
                      src="3"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="3"
                      src="4"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="4"
                      src="5"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="5"
                      src="6"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="6"
                      src="7"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="7"
                      src="8"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="8"
                      src="9"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="9"
                      src="10"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c14"
                data-testid="slider_left-arrow"
              >
                <svg
                  class="c7"
                  data-testid="icon-svg"
                  fill="#FFFFFF"
                  height="1em"
                  viewBox="0 0 100 100"
                  width="1em"
                >
                  <path
                    d="M81 88.4L42.6 50 81 11.8 69.2 0l-50 50 50 50z"
                  />
                </svg>
              </div>
              <div
                class="c15"
                data-testid="slider_right-arrow"
              >
                <svg
                  class="c7"
                  data-testid="icon-svg"
                  fill="#FFFFFF"
                  height="1em"
                  viewBox="0 0 100 100"
                  width="1em"
                >
                  <path
                    d="M19 88.4L57.4 50 19 11.8 30.8 0l50 50-50 50z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="c16"
            >
              <div>
                <img
                  alt="0"
                  data-testid="gallery_thumbnail"
                  src="1"
                />
              </div>
              <div>
                <img
                  alt="1"
                  data-testid="gallery_thumbnail"
                  src="2"
                />
              </div>
              <div>
                <img
                  alt="2"
                  data-testid="gallery_thumbnail"
                  src="3"
                />
              </div>
              <div>
                <img
                  alt="3"
                  class="active"
                  data-testid="gallery_thumbnail"
                  src="4"
                />
              </div>
              <div>
                <img
                  alt="4"
                  data-testid="gallery_thumbnail"
                  src="5"
                />
              </div>
              <div>
                <img
                  alt="5"
                  data-testid="gallery_thumbnail"
                  src="6"
                />
              </div>
              <div>
                <img
                  alt="6"
                  data-testid="gallery_thumbnail"
                  src="7"
                />
              </div>
              <div>
                <img
                  alt="7"
                  data-testid="gallery_thumbnail"
                  src="8"
                />
              </div>
              <div>
                <img
                  alt="8"
                  data-testid="gallery_thumbnail"
                  src="9"
                />
              </div>
              <div>
                <img
                  alt="9"
                  data-testid="gallery_thumbnail"
                  src="10"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Gallery /> rendering should match snapshot when imagesDisplayed is set 1`] = `
<DocumentFragment>
  .c7 {
  vertical-align: middle;
}

.c3 {
  visibility: hidden;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1001;
  background: rgba(0,0,0,0.65);
  overflow: auto;
}

.c4 {
  position: relative;
}

.c5 {
  position: relative;
  background: transparent;
  margin: 120px auto;
  outline: none;
  width: 500px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 1.6em;
  border-bottom: 1px solid #C6C6C6;
  padding: 15px;
}

.c6 h3 {
  font-size: 0.8em;
  text-transform: uppercase;
  margin: 0;
  margin-right: 36px;
}

.c6 button {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  width: 15px;
}

.c8 {
  position: relative;
  padding: 0;
}

.c0 {
  position: relative;
}

.c0 .modal-content {
  width: 95vw;
}

.c0 .modal-content .modal-header {
  border-bottom: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 img {
  height: 5em;
  width: 5em;
  object-fit: cover;
  cursor: pointer;
}

.c2 {
  position: relative;
  margin: 5px;
}

.c2:last-child:after {
  content: '+7';
  position: absolute;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0869C2;
  height: 100%;
  width: 100%;
  font-size: 18px;
  background: rgba(255,255,255,0.75);
  cursor: pointer;
}

@media (max-width:480) {
  .c5 {
    width: 95vw;
  }
}

@media (max-width:480) {
  .c8 {
    padding: 0;
  }
}

<div
    class="c0 aries-gallery"
  >
    <div
      class="c1 gallery-wrapper"
    >
      <div
        class="c2 gallery-item"
      >
        <img
          alt="0"
          src="1"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="1"
          src="2"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="2"
          src="3"
        />
      </div>
    </div>
    <div
      class="c3 aries-modal"
      data-testid="modal-container"
    >
      <div
        class="c4 modal-dialog"
      >
        <div
          aria-modal="true"
          class="c5 modal-content"
          data-testid="dialog"
          role="dialog"
          tabindex="0"
        >
          <header
            class="c6 modal-header"
          >
            <h3 />
            <button
              aria-label="Close button"
              data-testid="close-button"
              type="button"
            >
              <svg
                class="c7"
                data-testid="icon-svg"
                fill="white"
                height="1em"
                viewBox="0 0 100 100"
                width="1em"
              >
                <path
                  d="M100 10L90 0 50 40 10 0 0 10l40 40L0 90l10 10 40-40 40 40 10-10-40-40z"
                />
              </svg>
            </button>
          </header>
          <section
            class="c8 modal-body"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Gallery /> rendering should match snapshot when item is less than defaultImagesDisplayed 1`] = `
<DocumentFragment>
  .c7 {
  vertical-align: middle;
}

.c3 {
  visibility: hidden;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1001;
  background: rgba(0,0,0,0.65);
  overflow: auto;
}

.c4 {
  position: relative;
}

.c5 {
  position: relative;
  background: transparent;
  margin: 120px auto;
  outline: none;
  width: 500px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 1.6em;
  border-bottom: 1px solid #C6C6C6;
  padding: 15px;
}

.c6 h3 {
  font-size: 0.8em;
  text-transform: uppercase;
  margin: 0;
  margin-right: 36px;
}

.c6 button {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  width: 15px;
}

.c8 {
  position: relative;
  padding: 0;
}

.c0 {
  position: relative;
}

.c0 .modal-content {
  width: 95vw;
}

.c0 .modal-content .modal-header {
  border-bottom: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 img {
  height: 5em;
  width: 5em;
  object-fit: cover;
  cursor: pointer;
}

.c2 {
  position: relative;
  margin: 5px;
}

@media (max-width:480) {
  .c5 {
    width: 95vw;
  }
}

@media (max-width:480) {
  .c8 {
    padding: 0;
  }
}

<div
    class="c0 aries-gallery"
  >
    <div
      class="c1 gallery-wrapper"
    >
      <div
        class="c2 gallery-item"
      >
        <img
          alt="0"
          src="1"
        />
      </div>
    </div>
    <div
      class="c3 aries-modal"
      data-testid="modal-container"
    >
      <div
        class="c4 modal-dialog"
      >
        <div
          aria-modal="true"
          class="c5 modal-content"
          data-testid="dialog"
          role="dialog"
          tabindex="0"
        >
          <header
            class="c6 modal-header"
          >
            <h3 />
            <button
              aria-label="Close button"
              data-testid="close-button"
              type="button"
            >
              <svg
                class="c7"
                data-testid="icon-svg"
                fill="white"
                height="1em"
                viewBox="0 0 100 100"
                width="1em"
              >
                <path
                  d="M100 10L90 0 50 40 10 0 0 10l40 40L0 90l10 10 40-40 40 40 10-10-40-40z"
                />
              </svg>
            </button>
          </header>
          <section
            class="c8 modal-body"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Gallery /> rendering should match snapshot when slider is not shown 1`] = `
<DocumentFragment>
  .c7 {
  vertical-align: middle;
}

.c3 {
  visibility: hidden;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1001;
  background: rgba(0,0,0,0.65);
  overflow: auto;
}

.c4 {
  position: relative;
}

.c5 {
  position: relative;
  background: transparent;
  margin: 120px auto;
  outline: none;
  width: 500px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 1.6em;
  border-bottom: 1px solid #C6C6C6;
  padding: 15px;
}

.c6 h3 {
  font-size: 0.8em;
  text-transform: uppercase;
  margin: 0;
  margin-right: 36px;
}

.c6 button {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  width: 15px;
}

.c8 {
  position: relative;
  padding: 0;
}

.c0 {
  position: relative;
}

.c0 .modal-content {
  width: 95vw;
}

.c0 .modal-content .modal-header {
  border-bottom: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 img {
  height: 5em;
  width: 5em;
  object-fit: cover;
  cursor: pointer;
}

.c2 {
  position: relative;
  margin: 5px;
}

.c2:last-child:after {
  content: '+2';
  position: absolute;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0869C2;
  height: 100%;
  width: 100%;
  font-size: 18px;
  background: rgba(255,255,255,0.75);
  cursor: pointer;
}

@media (max-width:480) {
  .c5 {
    width: 95vw;
  }
}

@media (max-width:480) {
  .c8 {
    padding: 0;
  }
}

<div
    class="c0 aries-gallery"
  >
    <div
      class="c1 gallery-wrapper"
    >
      <div
        class="c2 gallery-item"
      >
        <img
          alt="0"
          src="1"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="1"
          src="2"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="2"
          src="3"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="3"
          src="4"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="4"
          src="5"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="5"
          src="6"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="6"
          src="7"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="7"
          src="8"
        />
      </div>
    </div>
    <div
      class="c3 aries-modal"
      data-testid="modal-container"
    >
      <div
        class="c4 modal-dialog"
      >
        <div
          aria-modal="true"
          class="c5 modal-content"
          data-testid="dialog"
          role="dialog"
          tabindex="0"
        >
          <header
            class="c6 modal-header"
          >
            <h3 />
            <button
              aria-label="Close button"
              data-testid="close-button"
              type="button"
            >
              <svg
                class="c7"
                data-testid="icon-svg"
                fill="white"
                height="1em"
                viewBox="0 0 100 100"
                width="1em"
              >
                <path
                  d="M100 10L90 0 50 40 10 0 0 10l40 40L0 90l10 10 40-40 40 40 10-10-40-40z"
                />
              </svg>
            </button>
          </header>
          <section
            class="c8 modal-body"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Gallery /> rendering should match snapshot when slider is shown 1`] = `
<DocumentFragment>
  .c7 {
  vertical-align: middle;
}

.c3 {
  visibility: visible;
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1001;
  background: rgba(0,0,0,0.65);
  overflow: auto;
}

.c4 {
  position: relative;
}

.c5 {
  position: relative;
  background: transparent;
  margin: 120px auto;
  outline: none;
  width: 500px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  font-size: 1.6em;
  border-bottom: 1px solid #C6C6C6;
  padding: 15px;
}

.c6 h3 {
  font-size: 0.8em;
  text-transform: uppercase;
  margin: 0;
  margin-right: 36px;
}

.c6 button {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  width: 15px;
}

.c8 {
  position: relative;
  padding: 0;
}

.c10 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  white-space: normal;
}

.c14 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  cursor: pointer;
  font-size: 2em;
  left: 0;
  cursor: not-allowed;
}

.c15 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  cursor: pointer;
  font-size: 2em;
  right: 0;
  cursor: pointer;
}

.c9 {
  position: relative;
  white-space: nowrap;
  overflow: hidden;
  outline: none;
}

.c9 .c11 {
  padding: 2em 4em;
}

.c9 ul {
  position: absolute;
  bottom: 0;
  width: 100%;
  padding: 0;
  margin: 10px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 ul li {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 12px;
  height: 12px;
  background: #C6C6C6;
  border-radius: 50%;
  box-shadow: 0 1px 1px rgba(0,0,0,0.15);
  margin: 0 4px;
  cursor: pointer;
}

.c9 ul li.active {
  width: 2.5em;
  border-radius: 1em;
  background: #FFF240;
}

.c0 {
  position: relative;
}

.c0 .modal-content {
  width: 95vw;
}

.c0 .modal-content .modal-header {
  border-bottom: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 img {
  height: 5em;
  width: 5em;
  object-fit: cover;
  cursor: pointer;
}

.c2 {
  position: relative;
  margin: 5px;
}

.c2:last-child:after {
  content: '+2';
  position: absolute;
  top: 0;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #0869C2;
  height: 100%;
  width: 100%;
  font-size: 18px;
  background: rgba(255,255,255,0.75);
  cursor: pointer;
}

.c13 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 img {
  height: 50vh;
  width: auto;
  object-fit: contain;
}

.c16 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c16 img {
  height: 4em;
  width: 4em;
  object-fit: cover;
  cursor: pointer;
  margin: 0.3em;
}

.c16 img.active {
  border: 1px solid #FFFFFF;
}

@media (max-width:480) {
  .c5 {
    width: 95vw;
  }
}

@media (max-width:480) {
  .c8 {
    padding: 0;
  }
}

<div
    class="c0 aries-gallery"
  >
    <div
      class="c1 gallery-wrapper"
    >
      <div
        class="c2 gallery-item"
      >
        <img
          alt="0"
          src="1"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="1"
          src="2"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="2"
          src="3"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="3"
          src="4"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="4"
          src="5"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="5"
          src="6"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="6"
          src="7"
        />
      </div>
      <div
        class="c2 gallery-item"
      >
        <img
          alt="7"
          src="8"
        />
      </div>
    </div>
    <div
      class="c3 aries-modal"
      data-testid="modal-container"
    >
      <div
        class="c4 modal-dialog"
      >
        <div
          aria-modal="true"
          class="c5 modal-content"
          data-testid="dialog"
          role="dialog"
          tabindex="0"
        >
          <header
            class="c6 modal-header"
          >
            <h3 />
            <button
              aria-label="Close button"
              data-testid="close-button"
              type="button"
            >
              <svg
                class="c7"
                data-testid="icon-svg"
                fill="white"
                height="1em"
                viewBox="0 0 100 100"
                width="1em"
              >
                <path
                  d="M100 10L90 0 50 40 10 0 0 10l40 40L0 90l10 10 40-40 40 40 10-10-40-40z"
                />
              </svg>
            </button>
          </header>
          <section
            class="c8 modal-body"
          >
            <div
              class="c9 aries-slider"
              tabindex="0"
            >
              <div
                class="c10 slider-wrapper"
                style="transform: translateX(0px); transition: transform ease-out 0.45s;"
              >
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="0"
                      src="1"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="1"
                      src="2"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="2"
                      src="3"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="3"
                      src="4"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="4"
                      src="5"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="5"
                      src="6"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="6"
                      src="7"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="7"
                      src="8"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="8"
                      src="9"
                    />
                  </div>
                </div>
                <div
                  class="c11 c12 slider-item"
                >
                  <div
                    class="c13"
                    role="banner"
                    tabindex="0"
                  >
                    <img
                      alt="9"
                      src="10"
                    />
                  </div>
                </div>
              </div>
              <div
                class="c14"
                data-testid="slider_left-arrow"
              >
                <svg
                  class="c7"
                  data-testid="icon-svg"
                  fill="#FFFFFF"
                  height="1em"
                  viewBox="0 0 100 100"
                  width="1em"
                >
                  <path
                    d="M81 88.4L42.6 50 81 11.8 69.2 0l-50 50 50 50z"
                  />
                </svg>
              </div>
              <div
                class="c15"
                data-testid="slider_right-arrow"
              >
                <svg
                  class="c7"
                  data-testid="icon-svg"
                  fill="#FFFFFF"
                  height="1em"
                  viewBox="0 0 100 100"
                  width="1em"
                >
                  <path
                    d="M19 88.4L57.4 50 19 11.8 30.8 0l50 50-50 50z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="c16"
            >
              <div>
                <img
                  alt="0"
                  class="active"
                  data-testid="gallery_thumbnail"
                  src="1"
                />
              </div>
              <div>
                <img
                  alt="1"
                  data-testid="gallery_thumbnail"
                  src="2"
                />
              </div>
              <div>
                <img
                  alt="2"
                  data-testid="gallery_thumbnail"
                  src="3"
                />
              </div>
              <div>
                <img
                  alt="3"
                  data-testid="gallery_thumbnail"
                  src="4"
                />
              </div>
              <div>
                <img
                  alt="4"
                  data-testid="gallery_thumbnail"
                  src="5"
                />
              </div>
              <div>
                <img
                  alt="5"
                  data-testid="gallery_thumbnail"
                  src="6"
                />
              </div>
              <div>
                <img
                  alt="6"
                  data-testid="gallery_thumbnail"
                  src="7"
                />
              </div>
              <div>
                <img
                  alt="7"
                  data-testid="gallery_thumbnail"
                  src="8"
                />
              </div>
              <div>
                <img
                  alt="8"
                  data-testid="gallery_thumbnail"
                  src="9"
                />
              </div>
              <div>
                <img
                  alt="9"
                  data-testid="gallery_thumbnail"
                  src="10"
                />
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
